# doxygen2confluence

./: README.md  setup.cfg
.github/workflows/: lint.yaml
examples/: basic_config.json  basic_config.yaml
src/doxygen2confluence/: __init__.py  __main__.py  cli.py  config.py
tests/: test_config.py  test_confluenceclient.py
