[metadata]
name = doxygen2confluence
version = 0.0.0
author = Christophe Le Douarec
author_email = ledouarec@gmail.com
description = Convert doxygen documentation to Confluence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cledouarec/doxygen2confluence
license = Apache License 2.0
license_files = LICENSE
keywords = doxygen confluence atlassian
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    atlassian-python-api
    PyYAML

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    pre-commit
    pylint
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    confluence-export = doxygen2confluence.cli:main

[aliases]
test=pytest

[flake8]
ignore = W503
max-line-length = 79
# max-complexity = 18
select = B,C,E,F,W,T4,B9
